--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
 h1{
@@ -19,7 +19,8 @@ h1{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    gap: 30px 30px;
+    gap: 20px;
+    
 }
 
 .card{
@@ -28,7 +29,7 @@ h1{
     justify-content: center;
     align-items: center;
     gap: 1em;
-    width: calc(100% / 4 - 30px / 4 * 3);
+    width: calc(100% / 4 - 20px / 4 * 3);
     padding: 1em;
     border: 1px solid black;
     
@@ -42,11 +43,12 @@ h1{
 }
 
 .img-container{
-    width: 250px;
-    height: 200px;
+    width: 150px;
+    height: 100px;
+    
 }
 
-img{
+.my-img{
     width: 100%;
     height: 100%;
     object-fit: cover;
